--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <h2>Hobbies</h2>
     <p>Gaming, Badminton, Volleyball, Cooking.</p>
     <hr>
-    <h2> <a href="C:\Users\Admin\Desktop\Web Develpoment\HTML\Contact_details.html">Contact Details</a></h2>
+    <h2> <a href="Contact_details.html">Contact Details</a></h2>
 
     </table>
   </body>
