--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="https://media-exp1.licdn.com/dms/image/C5603AQGhqukI9F_hqA/profile-displayphoto-shrink_200_200/0/1626779593619?e=1672876800&v=beta&t=KqK6DIZP4wnxO0OgQlYovyJO7bofKKLCKLN1YMgHmCc" alt="Tarun Gorja profilepic"></td>
+        <td><img src="Tarun_1.png" alt="Tarun Gorja profilepic"></td>
         <td>
           <h1><strong>TARUN GORJA</strong></h1>
           <p><em>A learner with a great interest of exploring new skills in programing.</em></p>
