--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="Tarun_1.png" alt="Tarun Gorja profilepic"></td>
+        <td><img src="images/Tarun_1.png" alt="Tarun Gorja profilepic"></td>
         <td>
           <h1><strong>TARUN GORJA</strong></h1>
           <p><em>A learner with a great interest of exploring new skills in programing.</em></p>
