--- a/1st_html&css/Contact_details.html
+++ b/1st_html&css/Contact_details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Details</title>
-    <link rel="stylesheet" href="C:\Users\Admin\Desktop\Web Develpoment\Introduction\CSS\styles.css">
+    <link rel="stylesheet" href="css\styles.css">
 
   </head>
   <body>
