--- a/1st_html&css/index.html
+++ b/1st_html&css/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tarun's Personal Site</title>
-    <link rel="stylesheet" href="C:\Users\Admin\Desktop\Web Develpoment\Introduction\CSS\styles.css">
+    <link rel="stylesheet" href="css\styles.css">
   </head>
 
   <body>
